--- a/server/package.json
+++ b/server/package.json
@@ -11,12 +11,21 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "algoliasearch": "^3.33.0",
+    "async": "^3.1.0",
+    "aws-sdk": "^2.487.0",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "faker": "^4.1.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.0",
-    "morgan": "^1.9.1"
+    "mongoose-algolia": "^1.8.0",
+    "mongoose-deep-populate": "^3.1.1",
+    "morgan": "^1.9.1",
+    "multer": "^1.4.1",
+    "multer-s3": "^2.9.0",
+    "stripe": "^7.4.0"
   }
 }
